--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@c5vargas/gsap-vue",
+  "name": "gsap-vue",
   "version": "0.1.0",
   "description": "Composable Vue 3 para usar GSAP con contexto (inspirado en @gsap/react)",
   "main": "dist/gsap-vue.cjs.js",
@@ -22,7 +22,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/c5vargas/gsap-vue.git"
+    "url": "git+https://github.com/c5vargas/gsap-vue.git"
   },
   "bugs": {
     "url": "https://github.com/c5vargas/gsap-vue/issues"
