--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "gsap-vue",
   "version": "0.1.1",
   "description": "Composable Vue 3 para usar GSAP con contexto (inspirado en @gsap/react)",
-  "main": "dist/gsap-vue.cjs.js",
+  "main": "dist/gsap-vue.umd.js",
   "module": "dist/gsap-vue.es.js",
+  "types": "index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "index.d.ts"
   ],
   "scripts": {
     "dev": "vite",
@@ -16,7 +18,9 @@
     "vue3",
     "gsap",
     "composable",
-    "animation"
+    "animation",
+    "vue",
+    "vue-composable"
   ],
   "author": "Carles Vargas <carles@carvar.es>",
   "license": "MIT",
