--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "Composable Vue 3 para usar GSAP con contexto (inspirado en @gsap/react)",
   "main": "dist/gsap-vue.umd.js",
   "module": "dist/gsap-vue.es.js",
-  "types": "index.d.ts",
+  "types": "dist/gsap-vue.d.ts",
   "files": [
     "dist",
-    "index.d.ts"
+    "gsap-vue.d.ts"
   ],
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "vite build && node copy-types.js",
+    "copy-types": "cp index.d.ts dist/gsap-vue.d.ts"
   },
   "keywords": [
     "vue3",
